--- a/packages/react-data-grid-addons/package.json
+++ b/packages/react-data-grid-addons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-data-grid-addons",
+  "name": "@eduardosmatheus/summarized-data-grid-addons",
   "version": "6.0.1",
   "description": "A set of addons for react-data-grid",
   "scripts": {
