--- a/packages/react-data-grid/package.json
+++ b/packages/react-data-grid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-data-grid",
+  "name": "@eduardosmatheus/summarized-data-grid",
   "version": "6.0.1",
   "description": "Excel-like grid component built with React, with editors, keyboard navigation, copy & paste, and the like",
   "scripts": {
