--- a/packages/react-data-grid/package.json
+++ b/packages/react-data-grid/package.json
@@ -27,5 +27,8 @@
     "object-assign": "^4.1.1",
     "react-is-deprecated": "^0.1.2",
     "shallowequal": "^1.1.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
